--- a/app/globals.css
+++ b/app/globals.css
@@ -25,15 +25,17 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #ffffff;
+  --foreground: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #ffffff;
-    --foreground: #ededed;
+    --foreground: #000000;
   }
 }
+
+
 
 body {
   color: var(--foreground);
