--- a/app/globals.css
+++ b/app/globals.css
@@ -36,13 +36,13 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #fffcf2;
-    --foreground: #252422;
+    --background: #eaebec;
+    --foreground: #212529;
   }
 }
 
 body {
-  color: var(--foreground);
+  color: var(--back);
   background: var(--background);
   font-family: "Montserrat", "Poppins", sans-serif;
 }
