--- a/app/globals.css
+++ b/app/globals.css
@@ -45,9 +45,9 @@ body {
   color: var(--back);
   background: var(--background);
   font-family: "Montserrat", "Poppins", sans-serif;
-    background-image: radial-gradient(circle, #e0e0e0 1px, transparent 1px);
-    background-size: 10px 10px; /* Ajusta el tamaño de los puntos */
-  
+  background-image: radial-gradient(circle, #e0e0e0 1px, transparent 1px);
+  background-size: 10px 10px; /* Ajusta el tamaño de los puntos */
+  min-height: 100vh;
 }
 
 .portada {
@@ -55,4 +55,9 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-image: url("../public/background.webp");
+}
+#__next {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
