fix: update background image format from webp to avif for improved performance

--- a/app/globals.css
+++ b/app/globals.css
@@ -54,7 +54,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-image: url("../public/background.webp");
+  background-image: url("../public/background.avif");
 }
 #__next {
   display: flex;
